--- a/slides-bayreuth.tex
+++ b/slides-bayreuth.tex
@@ -118,7 +118,7 @@ We consider the energy transferred to the body via the laser beam as a heat flux
 Here $\text{pd}_{\max}$ is the power density of the laser beam, $\eta$ is the absorption coefficient of the material, and $u(t)$ is the control function bounded by $[0,1]$.
 
 The cooling of the body is described as a heat flux through the whole boundary, except possibly $\Gamma_3$ (the choice of a boundary condition at the lateral surface $\Gamma_3$ makes no essential difference if the radius of $\Omega$ is chosen big enough).
-We distingush a convective and a radiative cooling heat fluxes modelled as
+We distinguish a convective and a radiative cooling heat fluxes modelled as
 \begin{equation}
 	\kappa(\theta(x,t)) \frac{\partial \theta(x,t)}{\partial \vec{n}} = h \cdot (\theta(x,t) - \theta_\text{amb})
 \end{equation}
@@ -292,8 +292,8 @@ where $\alpha(x(t),t)$ and $\beta(x(t),t)$ are scalar functions. From these equa
 		\texttt{{\textbackslash}end\{talk\}}\\[1em]
 		\vfill
 		\begin{tabular}{rl}
-			\textbf{this talk} & \url{https://github.com/optipulsproject/bayreuth-talk} \\
-			\textbf{preprint} & \url{https://github.com/optipulsproject/optcontrol-onespot} \\
+			\textbf{this talk} & \url{https://github.com/optipulsproject/talk-bayreuth} \\
+			\textbf{preprint} & \url{https://github.com/optipulsproject/paper-onespot} \\
 			\textbf{numerical model} & \url{https://github.com/optipulsproject/optipuls} \\
 			\textbf{makeresearch tutorial} & \url{https://github.com/dstrelnikov/makeresearch}
 		\end{tabular}
